overflow fix

--- a/sass/layout/_layout.scss
+++ b/sass/layout/_layout.scss
@@ -1,12 +1,12 @@
 @media (min-width: $md) {
 	.grid-left-side {
 		position: fixed;
-		width: 40vw;
+		width: 40%;
 	}
 
 	.grid-right-side {
-		width: 60vw;
-		margin-left: 40vw;
+		width: 60%;
+		margin-left: 40%;
 	}
 
 	.container {
